Added repository tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=spring-boot-testing
 server.port=9595
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
